# advanced-computer-science-project

./: .gitignore  docker-compose.yml
chat-service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  app.yaml
chat-service/src/: main.rs
client/: .gcloudignore  app.yaml  bun.lockb  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  App.module.css  index.css  index.jsx  store.jsx
client/src/api/: auth.js  chat.js
client/src/components/: ChatRoom.jsx  ChatRoom.module.scss  LoginForm.jsx  LoginForm.module.scss  RoomsPanel.jsx  RoomsPanel.module.scss  UserDetail.jsx
kubernetes/: chat-service-deployment.yaml  chat-service-hpa.yaml  chat-service-service.yaml  ingress.yaml  managed-certificate.yaml  user-service-deployment.yaml  user-service-hpa.yaml  user-service-service.yaml
load-testing/: gae.load-test.yaml  gke.load-test.yaml
user-service/: Cargo.toml  Dockerfile  app.yaml  kubernetes.Dockerfile
user-service/.sqlx/: query-228952ff710c63d38c67fab041001e19f28a8a2edfeb275be12f971b112cb3a2.json  query-add317b4f6177033a1748118b7da69a6d6050f7abc76a213b479f0594d531f39.json  query-eb1d76352f40eb17a3ad0ef90c8ee76076ea1790a027f353f9c04b0ac83390d2.json
user-service/src/: main.rs
