[package]
name = "chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "request-id", "trace", "fs"] }
serde = { version = "1.0.217", features = ["derive"] }
futures = "0.3.31"
async-stream = "0.3.6"
rustls = { version = "0.23.21", features = ["ring"] }
http = "1.2.0"
chrono = "0.4.39"
dotenv = "0.15.0"
