[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8", features = ["ws", "tokio", "http2"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4.39"
dotenv = "0.15.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "request-id", "trace", "fs"] }
